[feat] index - main e carrosel
- alteração nome css para fins de organização
- criação da sessão principal
- preparação dos elementos para o carrosel

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECOnsciente</title>
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/header.css">
+    <link rel="stylesheet" href="estilo/mainintro.css">
+    <link rel="stylesheet" href="estilo/carrosel.css">
 </head>
 <body>
 
@@ -29,6 +31,30 @@
         </div>
         
     </header>
+
+    <main class="intro">
+            <div class="intro-info">
+                <h1>Bem vindo ao site</h1>
+                <p>mais um texto apresentando qual seria algma cousa sobre algo a mais</p>
+                <button>Artigo principal</button>
+            </div>
+    </main>
+
+    <section id="carrosel">
+        <div class="flv">
+            <h3>maça</h3>
+            <p>curiosidade</p>
+        </div>
+        <div class="flv">
+            <h3>pera</h3>
+            <p>curiosidade</p>
+        </div>
+        <div class="flv">
+            <h3>abacate</h3>
+            <p>curiosidade</p>
+        </div>
+    </section>
+
 
     
 </body>
