--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <div>
-            <img src="img/logotemp.png" alt="">
+            <img src="img/ECONS.png" alt="">
         </div>
 
         <div>
@@ -38,7 +38,7 @@
             <div class="intro-info">
                 <h1>Nossa Missão</h1>
                 <p>Aqui no ECOnsciente, você encontrará informações e dicas práticas de armazenamento de frutas, legumes e verduras, e para testar seus conhecimentos participe dos nossos quizzes e veja o quanto você realmente sabe. Nosso objetivo é conscientizar e educar a população sobre a importância de reduzir o desperdício de alimentos, acreditamos que pequenas mudanças em nossos hábitos diários podem ter um grande impacto.</p>
-                <button>Artigo principal</button>
+                <button>ARTIGO PRINCIPAL</button>
             </div>
     </main>
 
