--- a/quiz.html
+++ b/quiz.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="estilo/header.css">
+    <link rel="stylesheet" href="estilo/quiz.css">
+    <link rel="stylesheet" href="estilo/rodape.css">
+
 </head>
 <body>
     
     <header>
         <div>
-            <img src="img/logotemp.png" alt="">
+            <img src="img/ECONS.png" alt="">
         </div>
 
         <div>
@@ -29,6 +32,151 @@
         </div>
         
     </header>
+
+    <main>
+
+        <div>
+            <h2 class="txt-center">Teste seus conhecimentos sobre concervação correta de alimentos</h2>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">1. Qual a maneira correta de conservar hortaliças, como alface e coentro?</h3>
+            <div class="alternativas">
+                <p> <input type="radio" name="" id=""> A) Guardar diretamente na geladeira, sem lavar e sem proteger.</p> 
+                <p> <input type="radio" name="" id=""> B) Lavar, secar bem e armazenar em um pote hermético como papel toalha.</p>
+                <p> <input type="radio" name="" id=""> C) Congelar logo após a compra para mantê-las frescas por mais tempo.</p>
+                <p> <input type="radio" name="" id=""> D) Deixar fora da geladeira, em um local seco e arejado.</p>
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">2. Como armazenar uma maçã cortada sem que ela escureça rapidamente?</h3>
+            <div class="alternativas">
+                <p> <input type="radio" name="" id=""> Colocar em um recipiente fechado.</p>
+                <p> <input type="radio" name="" id=""> Colocar as fatias imersas em água gelada.</p>
+                <p> <input type="radio" name="" id=""> Pingar suco de limão nas fatias para evitar a oxidação.</p>
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">3. Qual a maneira correta de conservar batatas? </h3>
+            <div class="alternativas">
+                <p>A) Guardar na geladeira para manter a umidade.</p>
+                <p>B) Armazenar em local fresco, seco e escuro. </p> <!-- CERTA -->
+                <p>C) Congelar logo após a compra.</p>
+                <P>D) Deixar exposta ao sol para manter firme.</P>
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">4. Como conservar cenouras para que durem mais tempo?</h3>
+            <div class="alternativas">
+                <p>A) Lavar, secar bem e guardar na geladeira em saco plástico perfurado.</p> <!-- CERTA -->
+                <p>B) Armazenar em local seco e quente.</p>
+                <p>C) Cortar em pedaços e deixar em temperatura ambiente.</p>
+                <p>D) Congelar imediatamente após lavar.</p>
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">5. Qual é a melhor forma de armazenar abobrinhas?</h3>
+            <div class="alternativas">
+                <p>A) Deixar em temperatura ambiente até consumir.</p>
+                <p>B) Guardar na geladeira em saco plástico sem lavar.</p>  <!-- CERTA -->
+                <p>C) Congelar logo após a compra.</p>
+                <p>D) Lavar e secar, deixando em local arejado.</p>
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">6. Como conservar bananas para evitar que amadureçam muito rápido?</h3>
+            <div class="alternativas">
+                <p>A) Guardar na geladeira.</p>
+                <p>B) Congelar quando começarem a amadurecer.</p>
+                <p>C) Lavar e deixar na geladeira.</p>
+                <p>D) Manter em temperatura ambiente, penduradas ou separadas das demais frutas.</p> <!-- CORRETA -->
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">7. Qual a maneira correta de armazenar morangos?</h3>
+            <div class="alternativas">
+                <p>A) Lavar e guardar na geladeira em recipiente aberto.</p>
+                <p>B) Congelar imediatamente após a compra.</p>
+                <p>C) Guardar na geladeira sem lavar, em um pote com papel toalha.</p> <!-- CORRETA -->
+                <p>D) Deixar em temperatura ambiente até consumir.</p>
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">8. Como conservar maçãs por mais tempo</h3>
+            <div class="alternativas">
+                <p>A) Deixar em local fresco e seco fora da geladeira.</p> <!-- CORRETA -->
+                <p>B) Armazenar na geladeira dentro de um saco plástico fechado.</p>
+                <p>C) Lavar e secar antes de guardar.</p>
+                <p>D) Congelar logo após a compra</p>
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">9. Como conservar espinafre fresco?</h3>
+            <div class="alternativas">
+                <p>A) Manter em temperatura ambiente até consumir.</p>
+                <p>B) Congelar logo após a compra.</p>
+                <p>C) Deixar em local arejado fora da geladeira.</p>
+                <p>D) Lavar, secar e guardar em um saco plástico com papel toalha na geladeira.</p> <!-- CORRETA -->
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">10. Qual a maneira correta de armazenar couve?</h3>
+            <div class="alternativas">
+                <p>A) Congelar imediatamente após a compra.</p>
+                <p>B) Guardar na geladeira em saco plástico bem fechado.</p> <!-- CORRETA -->
+                <p>C) Deixar em local fresco e seco fora da geladeira.</p>
+                <p>D) Lavar e guardar diretamente na geladeira sem secar.</p>
+            </div>
+        </div>
+
+        <div>
+            <div class="img01 container"></div>
+
+            <h3  class="txt-center">11. Como conservar rúcula para que dure mais?</h3>
+            <div class="alternativas">
+                <p>A) Lavar, secar e armazenar na geladeira em recipiente fechado com papel toalha.</p> <!-- correta -->
+                <p>B) Deixar em temperatura ambiente.</p>
+                <p>C) Congelar logo após a compra.</p>
+                <p>D) Lavar e guardar sem secar na geladeira.</p> 
+            </div>
+        </div>
+
+        <!-- DIV COM O PERCENTUAL, MENSAGEM DINAMICA CONFORME A PORCENTAGEM PELO JS , -->
+
+    </main>
+
+
+
+
 
 </body>
 </html>
