--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
 
         <div class="flv fruta">
             <div class="flv-image maca"></div>
-            <h3>maça</h3>
-            <p>curiosidade</p>
+            <h3>MAÇÃ</h3>
+            <p>Existem mais de 7.500 tipos de maçãs no mundo.</p>
         </div>
 
         <div class="flv fruta">
-            <div class="flv-image maca"></div>
-            <h3>pera</h3>
-            <p>curiosidade</p>
+            <div class="flv-image pera"></div>
+            <h3>PERA</h3>
+            <p>A pera é composta por cerca de 85% de água.</p>
         </div>
 
         <div class="flv fruta">
-            <div class="flv-image maca"></div>
-            <h3>abacate</h3>
-            <p>curiosidade</p>
+            <div class="flv-image banana"></div>
+            <h3>BANANA</h3>
+            <p>A banana é uma das frutas mais consumidas no mundo.</p>
         </div>
 
         <!-- LEGUMES -->
