--- a/feedback.html
+++ b/feedback.html
@@ -66,6 +66,13 @@
 
     </main>
 
+<!-- 
+    
+    nota de satisfação com site   
+    em uma escala X, o quanto vc recomendaria pra alguem?
+
+-->
+
      <footer class="rodape">
         &reg; Direitos reservados
         
