--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
         <div>
-            <img src="img/ECONS.png" alt="">
+            <img src="./img/ECONSv2.png" alt="">
         </div>
 
         <div>
@@ -26,7 +26,7 @@
                     <li><a href="./quiz.html">Quiz</a></li>
                     <li><a href="./feedback.html">Feedback</a></li>
                     <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
+                        <svg  xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50"
                             viewBox="0 0 50 50">
                             <path
                                 d="M 5 8 A 2.0002 2.0002 0 1 0 5 12 L 45 12 A 2.0002 2.0002 0 1 0 45 8 L 5 8 z M 5 23 A 2.0002 2.0002 0 1 0 5 27 L 45 27 A 2.0002 2.0002 0 1 0 45 23 L 5 23 z M 5 38 A 2.0002 2.0002 0 1 0 5 42 L 45 42 A 2.0002 2.0002 0 1 0 45 38 L 5 38 z">
