[refactor] link com novo caminho de estilos e img; alteração atributo 'lang' na tag html

--- a/artigo.html
+++ b/artigo.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artigos</title>
-    <link rel="stylesheet" href="estilo/header.css">
+    <link rel="stylesheet" href="./assets/style/header.css">
+    <link rel="stylesheet" href="./assets/style/rodape.css">
 </head>
 
 <body>
 
     <header>
         <div>
-            <img src="img/ECONS.png" alt="">
+            <img src="./assets/img/ECONSv2.png" alt="">
         </div>
 
         <div>
