[REFACTOR] mudança para novo diretorio

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECOnsciente</title>
-    <link rel="stylesheet" href="estilo/header.css">
-    <link rel="stylesheet" href="estilo/mainintro.css">
-    <link rel="stylesheet" href="estilo/carrossel.css">
-    <link rel="stylesheet" href="estilo/apresentacao.css">
-    <link rel="stylesheet" href="estilo/rodape.css">
+    <link rel="stylesheet" href="./assets/style/header.css">
+    <link rel="stylesheet" href="./assets/style/mainintro.css">
+    <link rel="stylesheet" href="./assets/style/carrossel.css">
+    <link rel="stylesheet" href="./assets/style/apresentacao.css">
+    <link rel="stylesheet" href="./assets/style/rodape.css">
 </head>
 
 <body>
 
     <header>
         <div>
-            <img src="./img/ECONSv2.png" alt="">
+            <img src="./assets/img/ECONSv2.png" alt="">
         </div>
 
         <div>
