--- a/feedback.html
+++ b/feedback.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
-    <link rel="stylesheet" href="estilo/header.css">
-    <link rel="stylesheet" href="estilo/rodape.css">
-    <link rel="stylesheet" href="estilo/feedback.css">
+    <link rel="stylesheet" href="./assets/style/header.css">
+    <link rel="stylesheet" href="./assets/style/rodape.css">
+    <link rel="stylesheet" href="./assets/style/feedback.css">
 </head>
 
 <body>
 
     <header>
         <div>
-            <img src="img/ECONS.png" alt="">
+            <img src="./assets/img/ECONSv2.png" alt="">
         </div>
 
         <div>
