[feat] adição da funcionalidade carrossel

--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
     <section id="carrossel">
 
         <div>
-            <button class="arrow-carrossel esq"></button>
+            <button class="arrow-carrossel esq" onclick="anteriorExibicao()"></button>
         </div>
 
         <!-- FRUTAS -->
 
-        <div class="flv fruta">
+        <div class="flv fruta" id="f01">
             <div class="flv-image maca"></div>
             <h3>MAÇÃ</h3>
             <p>Existem mais de 7.500 tipos de maçãs no mundo.</p>
         </div>
 
-        <div class="flv fruta">
+        <div class="flv fruta" id="f02">
             <div class="flv-image pera"></div>
             <h3>PERA</h3>
             <p>A pera é composta por cerca de 85% de água.</p>
         </div>
 
-        <div class="flv fruta">
+        <div class="flv fruta" id="f03">
             <div class="flv-image banana"></div>
             <h3>BANANA</h3>
             <p>A banana é uma das frutas mais consumidas no mundo.</p>
@@ -79,19 +79,19 @@
 
         <!-- LEGUMES -->
 
-        <div class="flv legume">
+        <div class="flv legume" id="l01">
             <div class="flv-image maca"></div>
             <h3>pepino</h3>
             <p>curiosidade</p>
         </div>
 
-        <div class="flv legume">
+        <div class="flv legume" id="l02">
             <div class="flv-image maca"></div>
             <h3>chuchu</h3>
             <p>curiosidade</p>
         </div>
 
-        <div class="flv legume">
+        <div class="flv legume" id="l03">
             <div class="flv-image maca"></div>
             <h3>abóbora</h3>
             <p>curiosidade</p>
@@ -99,26 +99,26 @@
 
         <!-- VERDURAS -->
 
-        <div class="flv verdura">
+        <div class="flv verdura" id="v01">
             <div class="flv-image maca"></div>
             <h3>alface</h3>
             <p>curiosidade</p>
         </div>
 
-        <div class="flv verdura">
+        <div class="flv verdura" id="v02">
             <div class="flv-image maca"></div>
             <h3>couve</h3>
             <p>curiosidade</p>
         </div>
 
-        <div class="flv verdura">
+        <div class="flv verdura" id="v03">
             <div class="flv-image maca"></div>
             <h3>espinafre</h3>
             <p>curiosidade</p>
         </div>
 
         <div>
-            <button class="arrow-carrossel dir"></button>
+            <button class="arrow-carrossel dir" onclick="proximaExibicao()"></button>
         </div>
 
     </section>
@@ -159,7 +159,11 @@
     </footer>
 
 
+    <script src="./assets/js/carrossel.js">
 
+        
+        
+    </script>
 </body>
 
 </html>
