--- a/index.html
+++ b/index.html
@@ -159,11 +159,7 @@
     </footer>
 
 
-    <script src="./assets/js/carrossel.js">
-
-        
-        
-    </script>
+    <script src="./assets/js/carrossel.js"></script>
 </body>
 
 </html>
