[feat] adição campos no form

--- a/feedback.html
+++ b/feedback.html
@@ -59,6 +59,37 @@
             </div>
 
             <div>
+                <label for="">De 0 a 10, qual a sua nota de satisfação com o site?</label>
+                <select name="" id="">
+                    <option value="" selected disabled>Selecione aqui</option>
+                    <option value="">0</option>
+                    <option value="">1</option>
+                    <option value="">2</option>
+                    <option value="">3</option>
+                    <option value="">4</option>
+                    <option value="">5</option>
+                    <option value="">6</option>
+                    <option value="">7</option>
+                    <option value="">8</option>
+                    <option value="">9</option>
+                    <option value="">10</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="">De 0 a 5, qual a chance de você recomendar o site para um amigo?</label>
+                <select name="" id="">
+                    <option value="" selected disabled>Selecione aqui</option>
+                    <option value="">0</option>
+                    <option value="">1</option>
+                    <option value="">2</option>
+                    <option value="">3</option>
+                    <option value="">4</option>
+                    <option value="">5</option>
+                </select>
+            </div>
+
+            <div>
                 <textarea name="mensagem" id="mensagem" placeholder="Digite a sua mensagem aqui" required></textarea>
             </div>
 
@@ -70,13 +101,6 @@
         </form>
 
     </main>
-
-    <!-- 
-    
-    nota de satisfação com site   
-    em uma escala X, o quanto vc recomendaria pra alguem?
-
--->
 
     <footer class="rodape">
         &reg; Direitos reservados
