--- a/feedback.html
+++ b/feedback.html
@@ -41,7 +41,7 @@
 
         <h1>Deixe a sua avaliação sobre o site</h1>
 
-        <form>
+        <form> <!-- por cor de fundo -->
 
             <div>
                 <label for="nome">Nome</label>
@@ -59,7 +59,7 @@
             </div>
 
             <div>
-                <label for="">De 0 a 10, qual a sua nota de satisfação com o site?</label>
+                <label for="">De 0 a 10, qual a sua nota de satisfação com o site?</label> <!-- como fzr com estrelas ao inves de select -->
                 <select name="" id="">
                     <option value="" selected disabled>Selecione aqui</option>
                     <option value="">0</option>
@@ -77,7 +77,7 @@
             </div>
 
             <div>
-                <label for="">De 0 a 5, qual a chance de você recomendar o site para um amigo?</label>
+                <label for="">De 0 a 5, qual a chance de você recomendar o site para um amigo?</label> <!-- como fzr com estrelas ao inves de select -->
                 <select name="" id="">
                     <option value="" selected disabled>Selecione aqui</option>
                     <option value="">0</option>
@@ -90,12 +90,12 @@
             </div>
 
             <div>
-                <textarea name="mensagem" id="mensagem" placeholder="Digite a sua mensagem aqui" required></textarea>
+                <textarea name="mensagem" id="mensagem" placeholder="Digite o seu feedback aqui..." required></textarea>
             </div>
 
             <div>
                 <button type="submit">Enviar</button>
-                <button type="reset">Limpar formulário</button>
+                <button type="reset">Limpar formulário</button> <!-- estilizar os botoes -->
             </div>
 
         </form>
