[feat] sessão de beneficios
- foi inserido uma sessão dos benefícios que o site proporciona

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>ECOnsciente</title>
     <link rel="stylesheet" href="./assets/style/header.css">
     <link rel="stylesheet" href="./assets/style/mainintro.css">
+    <link rel="stylesheet" href="./assets/style/pontos-positivos.css">
     <link rel="stylesheet" href="./assets/style/carrossel.css">
     <link rel="stylesheet" href="./assets/style/apresentacao.css">
     <link rel="stylesheet" href="./assets/style/rodape.css">
@@ -50,6 +51,30 @@
             <button>ARTIGO PRINCIPAL</button>
         </div>
     </main>
+
+    <section id="pontos-positivos">
+
+        <!-- FRUTAS -->
+
+        <div class="box">
+            <div class="box-content "></div>
+            <h3>Sustentabilidade acessível</h3>
+            <p>Um site informativo promove a sustentabilidade de forma prática e acessível, mostrando como pequenas mudanças no dia a dia podem fazer a diferença na preservação dos recursos naturais                .</p>
+        </div>
+
+        <div class="box">
+            <div class="box-content"></div>
+            <h3>Economia doméstica</h3>
+            <p>Informações sobre conservação de alimentos podem ajudar as famílias a economizar dinheiro, reduzindo a perda de frutas, legumes e verduras que acabam sendo descartados desnecessariamente.</p>
+        </div>
+
+        <div class="box">
+            <div class="box-content"></div>
+            <h3>Contribuição à segurança alimentar            </h3>
+            <p>Ao evitar o desperdício, o site ajuda a garantir que mais alimentos estejam disponíveis para consumo, o que é especialmente importante em regiões onde há insegurança alimentar.</p>
+        </div>
+
+    </section>
 
     <section id="carrossel">
 
