[refactor] imagens por questão
- padronização no espaçamento te titulos ddas questões. - preparação para inclusão de imagens por questão.

--- a/quiz.html
+++ b/quiz.html
@@ -44,9 +44,9 @@
         </div>
 
         <div class="display_block" id="questao01">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
-            <h2 class="txt-center">1. Qual a maneira correta de conservar hortaliças, como alface e coentro?</h2>
+            <h3 class="txt-center">1. Qual a maneira correta de conservar hortaliças, como alface e coentro?</h3>
             <div class="alternativas">
                 <p>
                     <input type="radio" onclick="selecionado(val=0)" name="questao" id="a">Guardar diretamente na geladeira, sem lavar e sem proteger.
@@ -70,7 +70,7 @@
         </div>
 
         <div  class="display_none" id="questao02">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
             <h3  class="txt-center">2. Qual a maneira correta de conservar batatas? </h3>
             <div class="alternativas">
@@ -98,7 +98,7 @@
         </div>
 
         <div  class="display_none" id="questao03">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
             <h3  class="txt-center">3. Como conservar cenouras para que durem mais tempo?</h3>
             <div class="alternativas">
@@ -127,7 +127,7 @@
         </div>
 
         <div  class="display_none" id="questao04">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
             <h3  class="txt-center">4. Qual é a melhor forma de armazenar abobrinhas?</h3>
             <div class="alternativas">
@@ -156,7 +156,7 @@
         </div>
 
         <div  class="display_none"  id="questao05">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
             <h3  class="txt-center">5. Como conservar bananas para evitar que amadureçam muito rápido?</h3>
             <div class="alternativas">
@@ -184,7 +184,7 @@
         </div>
 
         <div  class="display_none"  id="questao06">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
             <h3  class="txt-center">6. Qual a maneira correta de armazenar morangos?</h3>
             <div class="alternativas">
@@ -212,7 +212,7 @@
         </div>
 
         <div  class="display_none" id="questao07">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
             <h3  class="txt-center">7. Como conservar maçãs por mais tempo</h3>
             <div class="alternativas">
@@ -240,7 +240,7 @@
         </div>
 
         <div class="display_none" id="questao08">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
             <h3  class="txt-center">8. Como conservar espinafre fresco?</h3>
             <div class="alternativas">
@@ -268,7 +268,7 @@
         </div>
 
         <div  class="display_none" id="questao09">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
             <h3  class="txt-center">9. Qual a maneira correta de armazenar couve?</h3>
             <div class="alternativas">
@@ -296,7 +296,7 @@
         </div>
 
         <div class="display_none" id="questao10">
-            <div class="img01 container"></div>
+            <div class="imagem-questao"></div>
 
             <h3  class="txt-center">10. Como conservar rúcula para que dure mais?</h3>
             <div class="alternativas">
