--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         <!-- FRUTAS -->
 
         <div class="flv fruta" id="f01">
-            <div class="flv-image maca"></div>
+            <div class="flv-image" id="maca"></div>
             <h3>MAÇÃ</h3>
             <p>Existem mais de 7.500 tipos de maçãs no mundo.</p>
         </div>
 
         <div class="flv fruta" id="f02">
-            <div class="flv-image pera"></div>
+            <div class="flv-image" id="pera"></div>
             <h3>PERA</h3>
             <p>A pera é composta por cerca de 85% de água.</p>
         </div>
 
         <div class="flv fruta" id="f03">
-            <div class="flv-image banana"></div>
+            <div class="flv-image" id="banana"></div>
             <h3>BANANA</h3>
             <p>A banana é uma das frutas mais consumidas no mundo.</p>
         </div>
@@ -105,39 +105,39 @@
         <!-- LEGUMES -->
 
         <div class="flv legume" id="l01">
-            <div class="flv-image maca"></div>
+            <div class="flv-image" id="pepino"></div>
             <h3>pepino</h3>
             <p>curiosidade</p>
         </div>
 
         <div class="flv legume" id="l02">
-            <div class="flv-image maca"></div>
-            <h3>chuchu</h3>
+            <div class="flv-image" id="abobora"></div>
+            <h3>abóbora</h3>
             <p>curiosidade</p>
         </div>
 
         <div class="flv legume" id="l03">
-            <div class="flv-image maca"></div>
-            <h3>abóbora</h3>
+            <div class="flv-image maca" id="batata"></div>
+            <h3>batata</h3>
             <p>curiosidade</p>
         </div>
 
         <!-- VERDURAS -->
 
         <div class="flv verdura" id="v01">
-            <div class="flv-image maca"></div>
+            <div class="flv-image" id="alface" ></div>
             <h3>alface</h3>
             <p>curiosidade</p>
         </div>
 
         <div class="flv verdura" id="v02">
-            <div class="flv-image maca"></div>
+            <div class="flv-image" id="couve"></div>
             <h3>couve</h3>
             <p>curiosidade</p>
         </div>
 
         <div class="flv verdura" id="v03">
-            <div class="flv-image maca"></div>
+            <div class="flv-image" id="espinafre"></div>
             <h3>espinafre</h3>
             <p>curiosidade</p>
         </div>
