[feat] preparaçao carrossel principal
- adição de botões que vao alterar conteudo principal do site

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             </p>
             <button>ARTIGO PRINCIPAL</button>
         </div>
+
+        <div id="sessoes">
+            <button id="intro-btn-01 selecionado" onclick="mudarFundoPrincipal(0)"></button>
+            <button id="intro-btn-02" onclick="mudarFundoPrincipal(1)"></button>
+            <button id="intro-btn-03" onclick="mudarFundoPrincipal(2)"></button>
+        </div>
     </main>
 
     <section>
