--- a/feedback.html
+++ b/feedback.html
@@ -59,7 +59,8 @@
             </div>
 
             <div>
-                <label for="">De 0 a 10, qual a sua nota de satisfação com o site?</label> <!-- como fzr com estrelas ao inves de select -->
+                <label for="">De 0 a 10, qual a sua nota de satisfação com o site?</label>
+                <!-- como fzr com estrelas ao inves de select -->
                 <select name="" id="">
                     <option value="" selected disabled>Selecione aqui</option>
                     <option value="">0</option>
@@ -77,7 +78,8 @@
             </div>
 
             <div>
-                <label for="">De 0 a 5, qual a chance de você recomendar o site para um amigo?</label> <!-- como fzr com estrelas ao inves de select -->
+                <label for="">De 0 a 5, qual a chance de você recomendar o site para um amigo?</label>
+                <!-- como fzr com estrelas ao inves de select -->
                 <select name="" id="">
                     <option value="" selected disabled>Selecione aqui</option>
                     <option value="">0</option>
