--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
 
     <header>
         <div>
-            <img src="./assets/img/ECONSv2.png" alt="">
+            <a href="./index.html"><img src="./assets/img/ECONSv2.png" alt=""></a>
         </div>
 
         <div>
