--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
         <div class="flv none" id="item-carrossel-10">
             <div class="flv-image" id="pepino"></div>
             <h3>PEPINO</h3>
-            <p>O pepino é composto por mais de 95% de água, tornando-se uma excelente opção para hidratação e
-                refrescância, especialmente em dias quentes.</p>
+            <p>O pepino é composto por mais de 95% de água, tornando-se uma excelente opção para hidratação e refrescância, especialmente em dias quentes.</p>
         </div>
 
         <div class="flv none" id="item-carrossel-11">
@@ -164,8 +163,7 @@
         <div class="flv none" id="item-carrossel-12">
             <div class="flv-image maca" id="batata"></div>
             <h3>BATATA</h3>
-            <p>A batata é rica em potássio, um mineral importante para a regulação da pressão arterial e o bom
-                funcionamento dos músculos e nervos.</p>
+            <p>A batata é rica em potássio, um mineral importante para a regulação da pressão arterial e o bom funcionamento dos músculos e nervos.</p>
         </div>
 
 
@@ -175,22 +173,19 @@
         <div class="flv none" id="item-carrossel-13">
             <div class="flv-image" id="cebola"></div>
             <h3>CEBOLA</h3>
-            <p>A cebola contém compostos antioxidantes e anti-inflamatórios, que ajudam a fortalecer o sistema
-                imunológico e podem melhorar a saúde do coração e a digestão.</p>
+            <p>A cebola contém compostos antioxidantes e anti-inflamatórios, que ajudam a fortalecer o sistema imunológico e podem melhorar a saúde do coração e a digestão.</p>
         </div>
 
         <div class="flv none" id="item-carrossel-14">
             <div class="flv-image" id="beterraba"></div>
             <h3>BETERRABA</h3>
-            <p>A beterraba é rica em nitratos, que ajudam a melhorar a circulação sanguínea e aumentar a resistência
-                durante os exercícios.</p>
+            <p>A beterraba é rica em nitratos, que ajudam a melhorar a circulação sanguínea e aumentar a resistência durante os exercícios.</p>
         </div>
 
         <div class="flv none" id="item-carrossel-15">
             <div class="flv-image maca" id="aspargo"></div>
             <h3>ASPARGO</h3>
-            <p>O aspargo é uma excelente fonte de ácido fólico, essencial para a saúde celular, e contém antioxidantes
-                que ajudam a proteger o organismo contra o envelhecimento precoce.</p>
+            <p>O aspargo é uma excelente fonte de ácido fólico, essencial para a saúde celular, e contém antioxidantes que ajudam a proteger o organismo contra o envelhecimento precoce.</p>
         </div>
 
 
