--- a/quiz.html
+++ b/quiz.html
@@ -49,7 +49,7 @@
             <h3 class="txt-center">1. Qual a maneira correta de conservar hortaliças, como alface e coentro?</h3>
             <div class="alternativas">
                 <p>
-                    <input type="radio" name="questao" >Guardar diretamente na
+                    <input type="radio" value="0" name="questao" >Guardar diretamente na
                     geladeira, sem lavar e sem proteger.
                 </p>
 
@@ -60,13 +60,13 @@
                 </p>
 
                 <p>
-                    <input type="radio" name="questao" >Congelar logo após a compra
+                    <input type="radio" value="0" name="questao" >Congelar logo após a compra
                     para mantê-las frescas por mais
                     tempo.
                 </p>
 
                 <p>
-                    <input type="radio" name="questao" >Deixar fora da geladeira, em
+                    <input type="radio" value="0" name="questao" >Deixar fora da geladeira, em
                     um local seco e arejado.
                 </p>
 
