--- a/frutas.html
+++ b/frutas.html
@@ -159,52 +159,8 @@
 
     </footer> -->
 
-    <!--  <script>
-        // assim que página carregar, já carregar o array com as informações da API
-
-        const caminhoFRUTA = "./assets/img/fruta/";
-        const blocos = document.querySelectorAll('div.col');
-
-        const frutas = [
-            caminhoFRUTA + "abacaxi_isolated.jpg",
-            caminhoFRUTA + "ameixa_isolated.png",
-            caminhoFRUTA + "banana_isolated.png",
-            caminhoFRUTA + "cereja_isolated.png",
-            caminhoFRUTA + "damasco_isolated.png",
-            caminhoFRUTA + "kiwi_isolated.png",
-            caminhoFRUTA + "laranja_isolated.png",
-            caminhoFRUTA + "limão_isolated.png",
-            caminhoFRUTA + "red-apple-isolated.jpg",
-            caminhoFRUTA + "mamao_isolated.png",
-            caminhoFRUTA + "manga_isolated.png",
-            caminhoFRUTA + "melancia_isolated.png",
-            caminhoFRUTA + "morango_isolated.png",
-            caminhoFRUTA + "pera_isolated.png",
-            caminhoFRUTA + "pessego_isolated.png",
-            caminhoFRUTA + "uva_isolated.png"
-        ];
-
-        for (let i = 0; i < frutas.length; i++) {
-            blocos[i].style.backgroundImage = `url( ${frutas[i]} )`;
-            blocos[i].style.backgroundPosition = 'center';
-            blocos[i].style.backgroundSize = 'contain';
-            blocos[i].style.backgroundRepeat = 'no-repeat';
-        }
-
-        // E V E N T O S
-
-
-
-    </script> -->
-
-    <script>
-        const myModal = document.getElementById('myModal')
-        const myInput = document.getElementById('myInput')
-
-        myModal.addEventListener('shown.bs.modal', () => {
-            myInput.focus()
-        })
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="./assets/js/catalogoF.js"></script> 
 </body>
 
 </html>
